--- a/metadata.yaml
+++ b/metadata.yaml
@@ -29,5 +29,6 @@ subjects:
 - !lcsh 'Husband and wife -- Fiction'
 - !lcsh 'Man-woman relationships -- Fiction'
 - !lcc 'PR'
+- GITenberg
 title: Not Without Thorns
 url: http://www.gutenberg.org/ebooks/43106
